[package]
name = "sqlite-fs"
version = "0.1.0"
authors = ["Matsumura <naruaki.matt@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3"
chrono = "0.4"
libc = "0.2"
failure = "0.1"
log = "0.4"
env_logger = "0.7"
time = "0.1"

[dependencies.clap]
version = "4.5.26"
features = ["cargo","color"]

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled", "blob"]

[dependencies.nix]
version = "0.29"
features = ["fs"]

[dev-dependencies]
tempfile = "3"

